# url_shortener

./: README.md  pyproject.toml
backend/: settings.py  urls.py
shortener/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
shortener/migrations/: 0001_initial.py
